--- a/RDR2PicConv/RDR2PicConv.csproj
+++ b/RDR2PicConv/RDR2PicConv.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
-    <PublishTrimmed>true</PublishTrimmed>
+    <SelfContained>true</SelfContained>
     <RuntimeIdentifier>win-x86</RuntimeIdentifier>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <Authors>Daniel Gilbert</Authors>
     <Company />
     <Product>RDR2 Picture Converter</Product>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
 </Project>
